# xorg-cf

./: .gitignore  Amoeba.cf  ChangeLog  DGUX.cf  FreeBSD.cf  Imake.cf  Imake.rules  Imake.tmpl  Library.tmpl  Makefile.am  NetBSD.cf  OpenBSD.cf  OpenBSDLib.rules  OpenBSDLib.tmpl  QNX4.cf  QNX4.rules  README  Server.tmpl  ServerLib.tmpl  Threads.tmpl  WinLib.tmpl  X11.rules  X11.tmpl  autogen.sh  bsd.cf  bsdLib.rules  bsdLib.tmpl  bsdi.cf  bsdiLib.rules  bsdiLib.tmpl  configure.ac  cross.def  cross.rules  cygwin.cf  cygwin.rules  cygwin.tmpl  darwin.cf  darwinLib.rules  darwinLib.tmpl  dmx.cf  (+58 more)
